--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "clsx": "^2.1.0",
     "idb": "^8.0.0",
+    "jose": "^6.1.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "react": "^18.2.0",
